k3s_terraform_ansible_kubeflow_installation/ansible_docs/cluster-asg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-autoscaler
  namespace: kube-system
  labels:
    k8s-addon: cluster-autoscaler.addons.k8s.io
    app: cluster-autoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-autoscaler
  template:
    metadata:
      labels:
        k8s-addon: cluster-autoscaler.addons.k8s.io
        app: cluster-autoscaler
    spec:
      tolerations:
      - key: "clarus"
        operator: "Equal"
        value: "way"
        effect: "NoSchedule"
      restartPolicy: Always  
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:  
            nodeSelectorTerms:
            - matchExpressions:
              - key: master
                operator: In
                values:
                - db  
      serviceAccountName: cluster-autoscaler
      containers:
        - name: cluster-autoscaler
          image: k8s.gcr.io/autoscaling/cluster-autoscaler:v1.21.0
          #livenessProbe:
            #httpGet:
              #path: /health-check
              #port: 8085
          #readinessProbe:
            #httpGet:
              #path: /health-check
              #port: 8085
          resources:
            limits:
              cpu: 100m
              memory: 600Mi
            requests:
              cpu: 100m
              memory: 600Mi
          command:
            - ./cluster-autoscaler
            - --v=4
            - --stderrthreshold=info
            - --cloud-provider=aws
            - --skip-nodes-with-local-storage=false
            #- --nodes=1:10:projectx-asg-worker
            - --node-group-auto-discovery=asg:tag=k8s.io/cluster-autoscaler/enabled,k8s.io/cluster-autoscaler/cluster
          ports:
          - name: app
            containerPort: 8085
          #env:
           # - name: AWS_REGION
             # value: FIXME
          volumeMounts:
            - name: ssl-certs
              mountPath: /etc/ssl/certs/ca-certificates.crt
              readOnly: true
      volumes:
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs/ca-certificates.crt
      #dnsPolicy: "Default"
