k3s_terraform_ansible_kubeflow_installation/ansible_docs/prometheus-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: prometheus-server
  name: prometheus-ingress
  #namespace: devops-19-dev
  #annotations:
    #app.gitlab.com/app: ${CI_PROJECT_PATH_SLUG}
    #app.gitlab.com/env: ${CI_ENVIRONMENT_SLUG}

spec:
  rules:
  - host: "prometheus.kf.nioyatechai.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  #namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
  
spec:
  selector: 
    app: prometheus-server
  type: NodePort  
  ports:
    - port: 9090
      targetPort: 9090 
      nodePort: 30000                

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  #namespace: monitoring
  labels:
    app: prometheus-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.15.2
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus/"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /prometheus/
          resources:
            requests:
              cpu: 250m
              memory: 750Mi    
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
  
        - name: prometheus-storage-volume
          emptyDir: {}
